--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Si Ishte Dita Ime? - Aplikacion Interaktiv</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tone.js është hequr pasi seksioni i këngës është hequr -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
@@ -90,6 +91,22 @@
             background-color: #D95F43;
             transform: translateY(-2px);
         }
+        /* Stilet për butonin e këngës janë hequr */
+        #generate-storybook-btn { /* Style for the new storybook button */
+            background-color: #9932CC; /* Purple */
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            font-weight: bold;
+            transition: background-color 0.2s, transform 0.2s;
+            cursor: pointer;
+            text-align: center;
+        }
+        #generate-storybook-btn:hover {
+            background-color: #6A057F; /* Darker Purple */
+            transform: translateY(-2px);
+        }
+
         .story-modal {
             display: none;
             position: fixed;
@@ -149,6 +166,7 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        /* Kontrollet e këngës janë hequr */
     </style>
 </head>
 <body class="antialiased">
@@ -332,31 +350,59 @@
                 <button class="generate-story-btn mt-4 w-full bg-[#FFA07A] text-white py-2 rounded-lg font-bold hover:bg-[#D95F43] transition-colors" data-canvas-id="favorite-cat-canvas" data-context="macja preferuar">✨ Krijoni një Tregim!</button>
             </section>
 
+            <!-- Seksioni i Këngës Magjike është hequr plotësisht -->
+
+            <!-- Seksioni i ri për Librin e Tregimit të Ditës -->
+            <section class="card">
+                <h3 class="text-3xl font-bold text-center mb-4">Libri i Tregimit të Ditës! 📖✨</h3>
+                <p class="text-center text-gray-500 mb-6">Mblidhni të gjitha aventurat tuaja të ditës në një kapitull libri!</p>
+                <button id="generate-storybook-btn" class="w-full bg-[#9932CC] text-white py-3 rounded-lg font-bold text-xl hover:bg-[#6A057F] transition-colors">📖✨ Krijoni Kapitullin e Librit!</button>
+            </section>
+
         </div>
     </main>
 
     <div id="story-modal" class="story-modal">
         <div class="story-modal-content">
             <span class="close-button">&times;</span>
-            <h3 class="text-2xl font-bold text-[#D95F43] mb-4">Tregimi Magjik i Macës!</h3>
+            <h3 id="modal-title" class="text-2xl font-bold text-[#D95F43] mb-4">Tregimi Magjik i Macës!</h3>
             <div id="loading-indicator" class="loading-spinner mb-4"></div>
-            <p id="story-text" class="text-gray-700 text-lg"></p>
+            <!-- Kontrollet e këngës janë hequr nga modali -->
+            <p id="story-text" class="text-gray-700 text-lg whitespace-pre-wrap"></p>
         </div>
     </div>
 
     <script>
-        let selectedEmotion = 'neutrale';
+        let selectedEmotion = 'lumtur'; // Emocioni i paracaktuar
         let selectedOptions = {};
         let currentDrawingColor = '#FF6347'; // Ngjyra e paracaktuar e vizatimit
+        // Variablat e lidhura me këngën janë hequr (currentSongLines, currentLineIndex, playbackInterval, playerSynth)
+
+        // Funksionet e lidhura me këngën janë hequr (initializeToneSynth, playSimpleMelody, startSongPlayback, pauseSongPlayback, stopSongPlayback)
+
 
         document.addEventListener('DOMContentLoaded', () => {
             const emotionSelector = document.getElementById('emotion-selector');
             const cats = emotionSelector.querySelectorAll('.emotion-cat');
             const generateStoryButtons = document.querySelectorAll('.generate-story-btn');
+            // Butoni i gjenerimit të këngës është hequr
+            const generateStorybookButton = document.getElementById('generate-storybook-btn'); // Butoni i ri
             const storyModal = document.getElementById('story-modal');
             const closeModalBtn = document.querySelector('.close-button');
             const storyText = document.getElementById('story-text');
             const loadingIndicator = document.getElementById('loading-indicator');
+            const modalTitle = document.getElementById('modal-title');
+            // Kontrollet e këngës janë hequr (songControls, playSongBtn, pauseSongBtn, stopSongBtn)
+
+            // Aktivizo macen e parë të emocionit si të zgjedhur si parazgjedhje
+            const firstEmotionCat = emotionSelector.querySelector('.emotion-cat');
+            if (firstEmotionCat) {
+                firstEmotionCat.classList.add('selected');
+                selectedEmotion = firstEmotionCat.dataset.emotion;
+            }
+
+            // Lidh dëgjuesit e ngjarjeve për kontrollet e këngës (këto janë hequr)
+
 
             cats.forEach(cat => {
                 cat.addEventListener('click', () => {
@@ -459,12 +505,11 @@
                 if (!colorPicker) return;
                 const colorButtons = colorPicker.querySelectorAll('.color-button');
 
-                // Vendos ngjyrën e paracaktuar të vizatimit si të zgjedhurën fillimisht
                 const defaultColorButton = colorPicker.querySelector(`[data-color="${currentDrawingColor}"]`);
                 if (defaultColorButton) {
                     defaultColorButton.classList.add('selected');
                 } else {
-                    colorButtons[0].classList.add('selected'); // Zgjidh të parën nëse default s'gjendet
+                    colorButtons[0].classList.add('selected');
                     currentDrawingColor = colorButtons[0].dataset.color;
                 }
 
@@ -497,6 +542,8 @@
 
             generateStoryButtons.forEach(button => {
                 button.addEventListener('click', async (e) => {
+                    modalTitle.textContent = "Tregimi Magjik i Macës!"; // Vendos titullin për tregimin
+                    
                     const context = e.target.dataset.context;
                     const canvasId = e.target.dataset.canvasId;
                     const specificOption = selectedOptions[canvasId] || '';
@@ -563,7 +610,77 @@
                     }
                 });
             });
-        });
+
+            // Logjika për gjenerimin e Librit të Tregimit të Ditës
+            generateStorybookButton.addEventListener('click', async () => {
+                modalTitle.textContent = "Libri i Tregimit të Ditës! 📖✨"; // Vendos titullin për librin
+                
+                storyText.textContent = '';
+                loadingIndicator.style.display = 'block';
+                storyModal.style.display = 'flex';
+
+                let storybookDetails = [];
+                if (selectedEmotion && selectedEmotion !== 'neutrale') {
+                    storybookDetails.push(`Ndjenja e saj kryesore ishte: ${selectedEmotion}.`);
+                } else {
+                    storybookDetails.push(`Dita e saj ishte plot energji.`); // Default if no emotion selected
+                }
+                if (selectedOptions['play-canvas']) {
+                    storybookDetails.push(`Ajo luajti me: ${selectedOptions['play-canvas']}.`);
+                }
+                if (selectedOptions['favorite-part-canvas']) {
+                    storybookDetails.push(`Pjesa e saj e preferuar e ditës ishte: ${selectedOptions['favorite-part-canvas']}.`);
+                }
+                if (selectedOptions['food-canvas']) {
+                    storybookDetails.push(`Për drekë, ajo hëngri: ${selectedOptions['food-canvas']}.`);
+                }
+                if (selectedOptions['learned-canvas']) {
+                    storybookDetails.push(`Gjithashtu, ajo mësoi: ${selectedOptions['learned-canvas']}.`);
+                }
+                if (selectedOptions['tomorrow-canvas']) {
+                    storybookDetails.push(`Për nesër, ajo shpreson të: ${selectedOptions['tomorrow-canvas']}.`);
+                }
+                if (selectedOptions['favorite-cat-canvas']) {
+                    storybookDetails.push(`Macja e saj e preferuar, për të cilën ajo mendoi sot, ishte: ${selectedOptions['favorite-cat-canvas']}.`);
+                }
+
+                let storybookContext = storybookDetails.join(' ');
+                if (storybookContext === '') { // Fallback if no options or emotion are selected
+                    storybookContext = "Kjo ishte një ditë plot argëtim dhe zbulime të reja.";
+                }
+
+                let storybookPrompt = `Krijoni një kapitull të shkurtër, të thjeshtë dhe të gëzuar për një libër tregimesh për fëmijë, duke përmbledhur ditën e një maceje të vogël. Përdorni detajet e mëposhtme: ${storybookContext}. Tregimi duhet të jetë në shqip, me një ton pozitiv dhe i përshtatshëm për një fëmijë 3-vjeçar. Ai duhet të jetë afërsisht 5-7 rreshta i gjatë dhe të ketë një fillim dhe mbarim si një tregim.`;
+
+                try {
+                    let chatHistory = [];
+                    chatHistory.push({ role: "user", parts: [{ text: storybookPrompt }] });
+                    const payload = { contents: chatHistory };
+                    const apiKey = "AIzaSyDC7JvGxpFQQ-_8uBiFhsF3th6owohAuIU";
+                    const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
+
+                    const response = await fetch(apiUrl, {
+                                method: 'POST',
+                                headers: { 'Content-Type': 'application/json' },
+                                body: JSON.stringify(payload)
+                            });
+                    const result = await response.json();
+
+                    if (result.candidates && result.candidates.length > 0 &&
+                        result.candidates[0].content && result.candidates[0].content.parts &&
+                        result.candidates[0].content.parts.length > 0) {
+                            const text = result.candidates[0].content.parts[0].text;
+                            storyText.textContent = text;
+                        } else {
+                            storyText.textContent = "Diçka shkoi keq. Nuk mund të gjenerohet kapitulli i librit.";
+                        }
+                    } catch (error) {
+                        storyText.textContent = "Ndodhi një gabim: " + error.message;
+                        console.error("Gabim në gjenerimin e kapitullit të librit:", error);
+                    } finally {
+                        loadingIndicator.style.display = 'none';
+                    }
+                });
+            });
     </script>
 </body>
 </html>
